Mojo C++ Bindings: fix mojom::Foo::Deserialize() for component build.

Without this fix, if the mojom target containing mojom::Foo is linked into a
component, mojom::Foo::Deserialize() doesn't work outside of that component.

The reason is that the method calls mojom::Foo_Data::Valiate() which is not
exported.

BUG=702397

Review-Url: https://codereview.chromium.org/2754003005
Cr-Commit-Position: refs/heads/master@{#457791}

Former-commit-id: e9919293913d03d2169f99c882bae1569902ea7e